# AcceleratedQC

./: README.md
Kernels/: CMakeLists.txt  README.md
Kernels/src/: gmio_graph.hpp  hadamard_host.hpp  hadamard_host_xrt.cpp  main.cpp
catalyst/runtime/: Makefile
catalyst/runtime/lib/backend/: CMakeLists.txt
catalyst/runtime/lib/backend/custom_device/: CMakeLists.txt  CustomDevice.cpp  CustomDevice.hpp  HadamardKernelWrapper.cpp  INTEGRATION_SUMMARY.md  README.md  build.sh  circuit.py  circuit_with_mock_fpga.py  custom_device.toml  mock_fpga_simulator.py  test_hadamard_output.py  test_integration.py  worklog.txt  worklog2.txt
